--- a/package.json
+++ b/package.json
@@ -11,8 +11,23 @@
   "dependencies": {
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "@rainbow-me/rainbowkit": "^0.7.2",
+    "ethers": "^5.7.2",
+    "lodash.merge": "^4.6.2",
+    "nft.storage": "^7.0.0",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-toastify": "^9.1.1",
+    "wagmi": "^0.6.8"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.0"
   }
 }
