--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-simple-hook-modal": "^1.1.0",
     "react-spinners": "^0.13.6",
     "react-toastify": "^9.1.1",
     "wagmi": "^0.6.8"
