--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@rainbow-me/rainbowkit": "^0.7.2",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
@@ -29,6 +30,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
+    "hardhat": "^2.12.2",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.0"
   }
