--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "nft.storage": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0",
+    "react-hook-form": "^7.40.0",
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
-    "react-query": "^3.39.2",
-    "react-simple-hook-modal": "^1.1.0",
     "react-spinners": "^0.13.6",
+    "react-timeago": "^7.1.0",
     "react-toastify": "^9.1.1",
     "wagmi": "^0.6.8"
   },
